--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <h1 class="home_name">Rayan Aziz</h1>
                         <h3 class="home_education">Game Developer</h3>
                         <div class="home_buttons">
-                            <a download="" href="assets/pdf/Ansel-Cv.pdf" class="button button--ghost">
+                            <a download="" href="assets/img/CV.png" class="button button--ghost">
                                 Download CV
                             </a>
                             <a href="#about" class="button">About Me</a>
@@ -398,6 +398,14 @@
                 </div>
 
                 <div class="work_container container grid">
+                    <div class="work_card mix game-projects">
+                        <img src="assets/img/work7.png" alt="" class= "work_img">
+                        <h3 class="work_title">Game > Kick Me If You Can</h3>
+                        <a href="https://itsrayan11.itch.io/kmiyc" target="_blank" class="work_button">
+                            Check it out <i class='bx bx-right-arrow-alt work_icon' ></i>
+                        </a>
+                    </div>
+
                     <div class="work_card mix game-projects">
                         <img src="assets/img/work1.png" alt="" class= "work_img">
                         <h3 class="work_title">Game > Miniforma</h3>
